--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Sebastian Tanase</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -30,9 +30,9 @@
   <!-- =======================================================
   * Template Name: iPortfolio
   * Updated: Jul 27 2023 with Bootstrap v5.3.1
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Template URL: https://Sebastian Tanase.com/iportfolio-bootstrap-portfolio-websites-template/
+  * Author: Sebastian Tanase.com
+  * License: https://Sebastian Tanase.com/license/
   ======================================================== -->
 </head>
 
@@ -503,9 +503,9 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Licensing information: https://Sebastian Tanase.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://Sebastian Tanase.com/iportfolio-bootstrap-portfolio-websites-template/ -->
+        Designed by <a href="https://Sebastian Tanase.com/">Sebastian Tanase</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
