--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
+   <!-- <section id="resume" class="resume">
       <div class="container">
 
         <div class="section-title">
@@ -279,7 +279,7 @@
         </div>
 
       </div>
-    </section><!-- End Resume Section -->
+    </section>--><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
